--- a/index.html
+++ b/index.html
@@ -82,32 +82,48 @@
     margin-left: -10px;
   }
 
-  .image 
+  .twoWays
   { 
-    grid-area: image; 
+    grid-area: twoWays; 
     text-align: center;
-    font-size: 12pt;
-    padding: 20px 0;
-  }
-
-  .aboutHeader
-  {  
-    grid-area: aboutHeader; 
-    text-align: center;
-    font-size: 15pt;
+    font-size: 16pt;
     font-weight: bold;
     padding: 20px 0;
   }
 
-  .aboutText
-  { 
-    grid-area: aboutText; 
+  .mailHeader
+  {  
+    grid-area: mailHeader; 
     text-align: center;
-    font-size: 12pt;
+    font-size: 13pt;
+    font-weight: bold;
     padding: 20px 0;
   }
 
+  .emailHeader
+  { 
+    grid-area: emailHeader; 
+    text-align: center;
+    font-size: 13pt;
+    font-weight: bold;
+    padding: 20px 0;
+  }
 
+  .mailText
+  {  
+    grid-area: mailText; 
+    text-align: center;
+    font-size: 11pt;
+    padding: 20px 0;
+  }
+
+  .emailText
+  { 
+    grid-area: emailText; 
+    text-align: center;
+    font-size: 11pt;
+    padding: 20px 0;
+  }
 
   .grid-container 
   {
@@ -116,10 +132,10 @@
       'menu menu menu menu menu menu'
       'title title title title title title'
       'subtitle subtitle subtitle subtitle subtitle subtitle'
-      'image image image . . .'
-      'image image image aboutHeader aboutHeader aboutHeader'
-      'image image image aboutText aboutText aboutText'
-      'image image image . . .';
+      'twoWays twoWays twoWays twoWays twoWays twoWays'
+      'mailHeader mailHeader mailHeader emailHeader emailHeader emailHeader'
+      'mailText mailText mailText emailText emailText emailText'
+      'mailText mailText mailText emailText emailText emailText';
   }
  </style>
  <script>
@@ -224,8 +240,10 @@
   <div class="title">Mid-Atlantic SAFE</div>
   <div class="subtitle">Bringing toys to children in need</div>
   <div class="twoWays">Two ways to donate! (Thanks in advance.)</div>  
-  <div class="aboutHeader">About SAFE</div>
-  <div class="aboutText"><i>No</i> donations will be sold. All donations are given to children in need for free.</div>
+  <div class="mailHeader">Mail It</div>
+  <div class="emailHeader">Email It</div>
+  <div class="mailText">blah blah mailText</div>
+  <div class="emailText">blah blah blah emailText</div>
  </div>
 
 </body>
