--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   Donate | Money
  </title>
  <link rel="stylesheet" type="text/css" href="donateMoney.css">
- <script src="donateMoney.js"></script>
+ <script src="DonateMoney.js"></script>
 </head>
 <body>
 
