--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="mailHeader">Mail It</div>
   <div class="emailHeader">Email It</div>
   <div class="mailText">blah blah mailText</div>
-  <div class="emailText">blah blah blah emailText</div>
+  <div class="emailText">1. Open the gmail app<br>2. Click Compose(+)<br>Click the $<br>Select an amount<br></div>
  </div>
 
 </body>
