--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="mailHeader">Mail It</div>
   <div class="emailHeader">Email It</div>
   <div class="mailText">blah blah mailText</div>
-  <div class="emailText">1. Open the gmail app<br>2. Click Compose(+)<br>3. Address it to MidAtlantic@SAFE.com<br>4. Click the $<br>5. Select an amount<br>6. If you have never done this, you will need to enter your credit card information<br>7. Add a memo (optional)<br>8. Look over your message and click Send</div>
+  <div class="emailText">1. Open the gmail app<br>2. Click Compose(+)<br>3. Address it to MidAtlantic@SAFE.com<br>4. Click the $<br>5. Select an amount<br>6. If you have never done this, you will need to enter your credit card information<br>7. Add a memo (optional)<br>8. Click Attach money<br>9. Look over your message and click Send</div>
  </div>
 
 </body>
