--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <title>
   Donate | Money
  </title>
- <link rel="stylesheet" type="text/css" href="donateMoney.css">
+ <link rel="stylesheet" type="text/css" href="DonateMoney.css">
  <script src="DonateMoney.js"></script>
 </head>
 <body>
